--- a/client/src/ui/index.scss
+++ b/client/src/ui/index.scss
@@ -111,3 +111,9 @@ button,
     white-space: nowrap;
     border-width: 0;
 }
+.visible{
+    visibility: visible;
+}
+.hidden{
+    visibility: hidden;
+}
